# ai_sales

./: .cursorrules  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pytest.ini  Dockerfile  README.md  deploy.sh  docker-compose.yml  init.sh  init_db.sql  make.ps1  pyproject.toml  pyrightconfig.json  requirements.local.txt  requirements.txt  requirements.ui.txt  run.sh
.github/workflows/: deploy.yml
data/companies/: open_development.yml
docs/: README.md  account_states.md  account_system.md  api_documentation.md  architecture_mvp.md  database.md  documentation_update_guide.md  implementation_plan.md  modules.md  mvp_details.md  terms.md
docs/1 - current/: README.md  architecture.md
docs/2 - observations/: README.md  hypothesis_testing.md  observations.md  openai_and_conversion.md  sales_team_testing.md  security.md  social_conversion.md
docs/2-observations/: lead_qualification_and_premium_targeting.md
docs/3 - vision/: README.md  campaign_types.md  implementation_plan.md  metrics_and_goals.md  system_components.md
docs/4 - next_sprint/: dialog_processing.md  message_template.md  tasks.md
docs/guides/: code_optimization.md
docs/reference/: README.md  terms.md
jeeves/: __init__.py  main.py
jeeves/api/: __init__.py
jeeves/infrastructure/: __init__.py  config.py  logging.py  posthog.py
jeeves/script_tests/: auth_account.py  (+4 more)
sales_bot/: config.py  main.py  models.py  scheduler.py
script_tests/: test_auth_account.py
tests/: conftest.py  test_campaign_accounts.py  test_conductor.py  test_decorators.py  test_imports.py
(+179 files in other folders)
